Bug 2599 - Xnest doesn't believe in window stacking order
Summary: Xnest doesn't believe in window stacking order
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xnest (show other bugs)
Version: 6.8.2
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
: 2109 3316 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-02-23 08:33 UTC by Adam Jackson
Modified: 2005-05-17 22:04 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
fix (1.31 KB, patch)
2005-02-23 11:10 UTC, Alexander Gottwald
ago: 6.8-branch?
Details | Splinter Review

Description Adam Jackson 2005-02-23 08:33:35 UTC
Xnest from recent CVS doesn't display properly when you use the wm controls to
change the stacking order.  The windows get restacked properly - input goes to
right places, cursors change according to the window you asked to have on top -
but the display is not updated to reflect this.

This is unfortunately not the same issue as, and not fixed by the patch in, bug
#2546.
Comment 1 Alexander Gottwald 2005-02-23 11:10:26 UTC
Created attachment 1964 [details] [review]
fix

fixes regression from bug #961

miScreenInit was moved after pScreen->ClipNotify was initialized. miScreenInit
reset it to NULL. Other pointers were reset by miScreenInit too. moved it
before pScreen->function initializations
Comment 2 Alexander Gottwald 2005-02-23 11:18:05 UTC
Comment on attachment 1964 [details] [review]
fix

fixed in HEAD

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.782; previous revision: 1.781
/cvs/xorg/xc/programs/Xserver/hw/xnest/Screen.c,v  <-- 
programs/Xserver/hw/xnest/Screen.c
new revision: 1.4; previous revision: 1.3
Comment 3 Alexander Gottwald 2005-02-23 11:28:04 UTC
marking as fixed
Comment 4 Alexander Gottwald 2005-03-31 07:26:49 UTC
*** Bug 2109 has been marked as a duplicate of this bug. ***
Comment 5 Nick Brown 2005-05-18 15:04:21 UTC
*** Bug 3316 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.