Bugzilla #2599 (https://bugs.freedesktop.org/show_bug.cgi?id=2599)     attachment #1964 (https://bugs.freedesktop.org/attachment.cgi?id=1964):     move miScreenInit in front of pScreen->function initializations to     prevent it from resetting ClipNotify.